# ACGM-for-Codex

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EVIDENCE.md  INSTALL.md  LICENSE-CODE  LICENSE-DOCS  LICENSING.md  PACKAGE_MANIFEST.json  README.en.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
hooks/: hooks.json
scripts/: acgm_codex.py  bootstrap.py  generate-package-manifest.py  install_local.py  preflight.py  quickstart.py  release_check.py
skills/activity-report/: SKILL.md
skills/activity-report/agents/: openai.yaml
skills/governance-bootstrap/: SKILL.md
skills/governance-bootstrap/agents/: openai.yaml
skills/session-grounding/: SKILL.md
skills/session-grounding/agents/: openai.yaml
skills/truth-first/: SKILL.md
skills/truth-first/agents/: openai.yaml
tests/: test_bootstrap.py  test_install_local.py  test_package_contract.py  test_quickstart.py  test_release_check.py  test_release_tools.py  test_runtime.py
tests/manual/: CODEX_E2E.md
